2010-01-31 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*, jacksync.*, midiarp.*: First attempt to run the MIDI
	and arpeggio engine in threads. QSocketNotifier replaced by poll for
	MIDI processing thread. Some timing cleanups for jack transport
	sync.

2010-01-23 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp, arpwidget.cpp: Tags added to resource file items
	for more flexibility. Old resource file will be without effect and
	then overwritten.
	
2010-01-20 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*, mainwindow.*: Jack transport sync capability
	integrated as a user choice. Jack sync object is created/destroyed
	as a child of seqdriver by toggling jackSync toolbar button. 
	Alsa queue is started at 0 on reception of jack transport start
	regardless the current jack transport position. Jack transport
	position is used as calibrator for alsa event scheduling. On 
	reception of jack shutdown/connect fail, an event is emitted 
	toggling back the jack transport button, which stops the queue and
	switches back to internal clock. 
	* jacksync.cpp, jacksync.h: jackSync class added providing jack
	transport data and emitting signals on transport start and jack
	shutdown. 
	* jacktr.xpm: icon added.
	* configure.ac, src/Makefile.am, src/pixmaps/Makefile.am: jack 
	dependency added, new files added to package.

2010-01-14 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp: Session name added to XML file, recent files menu
	added with code from AMS
	* arpwidget.*: missing reading-skips of unknown xml elements added

2010-01-13 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.*, arpwidget.*, lfowidget.*, seqwidget.*: Session file
	format changed to XML, file extension changed to .qmax, old text
	files can be imported by selecting .qma files in fileOpen dialog 
	filter.
	
2010-01-10 Frank Kober <goemusic@yahoo.fr>
	* arpdata.cpp, midicctable.cpp: mute MIDI controller behaviour
	extended: if min=max (default), a control value=127 toggles state.