@@ -1,3 +1,11 @@
+2010-02-01 Frank Kober <goemusic@yahoo.fr>
+	* seqdriver.cpp, midiarp.cpp: 4 more ticks added as tolerance for 
+	external sync to avoid getting off the hook by small clock 
+	variations, tick folding function implemented to allow for smooth
+	envelope behavior when jack transport is looping (or restarting)
+	* jacksync.*: reverted to be normal object, no need to have this as
+	a thread separate from seqdriver.
+	
 2010-01-31 Frank Kober <goemusic@yahoo.fr>
 	* seqdriver.*, jacksync.*, midiarp.*: First attempt to run the MIDI
 	and arpeggio engine in threads. QSocketNotifier replaced by poll for
